--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -77,7 +77,7 @@ jobs:
           make pyslow5 &&
           python3 -m unittest -v python/test.py"
   os_x_11:
-    name: pyslow5 mac os
+    name: pyslow5 mac os 11
     runs-on: macos-11
     steps:
     - uses: actions/checkout@v2
@@ -88,7 +88,7 @@ jobs:
     - name: test
       run: python3 -m unittest -v python/test.py
   os_x_12:
-    name: pyslow5 mac os
+    name: pyslow5 mac os 12
     runs-on: macos-12
     steps:
     - uses: actions/checkout@v2
@@ -99,7 +99,7 @@ jobs:
     - name: test
       run: python3 -m unittest -v python/test.py
   os_x_13:
-    name: pyslow5 mac os
+    name: pyslow5 mac os 13
     runs-on: macos-13
     steps:
     - uses: actions/checkout@v2
@@ -110,7 +110,7 @@ jobs:
     - name: test
       run: python3 -m unittest -v python/test.py
   os_x_14:
-    name: pyslow5 mac os
+    name: pyslow5 mac os 14
     runs-on: macos-12
     steps:
     - uses: actions/checkout@v2
