--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: install packages
-      run: sudo apt-get update && sudo apt-get install -y zlib1g-dev gcc g++ autoconf automake make
+      run: sudo apt-get update -y && sudo apt-get upgrade -y && sudo apt-get install -y zlib1g-dev gcc g++ autoconf automake make
     - name: env
       run: lsb_release -a &&  ldd --version && gcc --version && g++ --version
     - name: build
