--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: install packages
-      run: sudo apt-get update && sudo apt-get install -y zlib1g-dev python3-pip python3-cython python3-setuptools python3-numpy
+      run: sudo apt-get update && sudo apt-get install -y zlib1g-dev python3-pip cython3 python3-setuptools python3-numpy
     - name: env
       run: lsb_release -a &&  ldd --version && gcc --version && g++ --version && python3 --version
     - name: build
