--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: install packages
-      run: sudo apt-get update && sudo apt-get install -y zlib1g-dev python3-pip wget && wget --no-check-certificate https://bootstrap.pypa.io/get-pip.py && python3 get-pip.py && pip3 install setuptools cython "numpy>=1.13.3,<1.15.0" --user
+      run: sudo apt-get update && sudo apt-get install -y zlib1g-dev python3-pip wget && wget --no-check-certificate https://bootstrap.pypa.io/pip/3.4/get-pip.py && python3 get-pip.py && pip3 install setuptools cython "numpy>=1.13.3,<1.15.0" --user
     - name: env
       run: lsb_release -a &&  ldd --version && gcc --version && g++ --version && python3 --version
     - name: build
