--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -75,7 +75,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: install packages
-      run: sudo apt-get update && sudo apt-get install -y zlib1g-dev python3-pip && pip3 install setuptools cython numpy
+      run: sudo apt-get update && sudo apt-get install -y zlib1g-dev python3-pip && pip3 install --break-system-packages setuptools cython numpy
     - name: build
       run: make pyslow5
     - name: test
