--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -7,46 +7,44 @@ on:
     branches: [ '*' ]
 
 jobs:
-  ubuntu_14:
-    name: ubuntu_14
+  # ubuntu_14:
+  #   name: ubuntu_14
+  #   runs-on: ubuntu-20.04
+  #   container: ubuntu:14.04
+  #   steps:
+  #   - uses: actions/checkout@v2
+  #   - name: install packages
+  #     run: sudo apt-get update && sudo apt-get install -y zlib1g-dev gcc g++ autoconf automake make
+  #   - name: env
+  #     run: lsb_release -a &&  ldd --version && gcc --version && g++ --version
+  #   - name: build
+  #     run:  make -j8
+  #   - name: test
+  #     run: make test
+  ubuntu_16:
+    name: Ubuntu 16
     runs-on: ubuntu-20.04
-    container: ubuntu:14.04
+    container: ubuntu:16.04
     steps:
     - uses: actions/checkout@v2
     - name: install packages
-      run: sudo apt-get update && sudo apt-get install -y zlib1g-dev gcc g++ autoconf automake make
-    - name: env
-      run: lsb_release -a &&  ldd --version && gcc --version && g++ --version
+      run: apt-get update && apt-get install -y zlib1g-dev gcc g++ autoconf automake make
     - name: build
-      run:  make -j8
+      run: make -j8
     - name: test
       run: make test
-  ubuntu_14_cmake:
-    name: ubuntu_14_cmake
+  ubuntu_16_cmake:
+    name: Ubuntu 16 cmake
     runs-on: ubuntu-20.04
-    container: ubuntu:14.04
+    container: ubuntu:16.04
     steps:
     - uses: actions/checkout@v2
     - name: install packages
-      run: sudo apt-get update && sudo apt-get install -y zlib1g-dev gcc g++ autoconf automake make cmake
-    - name: env
-      run: lsb_release -a &&  ldd --version && gcc --version && g++ --version
+      run: apt-get update && apt-get install -y zlib1g-dev gcc g++ autoconf automake make
     - name: build
       run:  mkdir build && cd build && cmake .. && make -j8 && cd ..
     - name: test
       run: ./test/test.sh
-  # ubuntu_16:
-  #   name: Ubuntu 16
-  #   runs-on: ubuntu-20.04
-  #   container: ubuntu:16.04
-  #   steps:
-  #   - uses: actions/checkout@v2
-  #   - name: install packages
-  #     run: apt-get update && apt-get install -y zlib1g-dev gcc g++ autoconf automake make
-  #   - name: build
-  #     run: make -j8
-  #   - name: test
-  #     run: make test
   # ubuntu_18:
   #   name: Ubuntu 18
   #   runs-on: ubuntu-20.04
