--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -33,6 +33,16 @@ jobs:
       run: make -j8
     - name: test
       run: make test
+  ubuntu_16_cmake:
+    name: Ubuntu 16 cmake
+    runs-on: ubuntu-20.04
+    container: ubuntu:16.04
+    steps:
+    - uses: actions/checkout@v2
+    - name: install packages
+      run: apt-get update && apt-get install -y zlib1g-dev gcc g++ autoconf automake make cmake
+    - name: build
+      run:  mkdir build && cd build && cmake -DSLOW5_LINK_STATIC=ON -DSLOW5_USE_ZSTD=OFF -DSLOW5_ENABLE_MT=OFF .. && make -j8
   ubuntu_18:
     name: Ubuntu 18
     runs-on: ubuntu-20.04
