--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches: [ '*' ]
 
+env:
+  ACTIONS_ALLOW_USE_UNSECURE_NODE_VERSION: true
+
 jobs:
   ubuntu_14:
     name: pyslow5 Ubuntu_14
@@ -98,17 +101,6 @@ jobs:
           ldd --version && gcc --version && python3 --version &&
           make pyslow5 &&
           python3 -m unittest -v python/test.py"
-  os_x_11:
-    name: pyslow5 mac os 11
-    runs-on: macos-11
-    steps:
-    - uses: actions/checkout@v2
-    - name: install packages
-      run: pip3 install numpy setuptools
-    - name: build
-      run: make pyslow5
-    - name: test
-      run: python3 -m unittest -v python/test.py
   os_x_12:
     name: pyslow5 mac os 12
     runs-on: macos-12
