--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches: [ '*' ]
 
+env:
+  ACTIONS_ALLOW_USE_UNSECURE_NODE_VERSION: true
+
 jobs:
   ubuntu_14:
     name: ubuntu_14
@@ -143,28 +146,6 @@ jobs:
       run: make test
     - name: make mt
       run: examples/mt/build.sh
-  os_x_11:
-    name: OSX 11
-    runs-on: macos-11
-    steps:
-    - uses: actions/checkout@v2
-    - name: build
-      run: make -j8
-    - name: test
-      run: make test
-    - name: examples
-      run: make examples
-  os_x_11_zstd:
-    name: OSX 11 zstd
-    runs-on: macos-11
-    steps:
-    - uses: actions/checkout@v2
-    - name: install packages
-      run: brew install zstd
-    - name: build
-      run: make -j8 zstd=1
-    - name: test
-      run: make test zstd=1
   os_x_12:
     name: OSX 12
     runs-on: macos-12
@@ -176,6 +157,17 @@ jobs:
       run: make test
     - name: examples
       run: make examples
+  os_x_12_zstd:
+    name: OSX 12 zstd
+    runs-on: macos-12
+    steps:
+    - uses: actions/checkout@v2
+    - name: install packages
+      run: brew install zstd
+    - name: build
+      run: make -j8 zstd=1
+    - name: test
+      run: make test zstd=1
   os_x_13:
     name: OSX 13
     runs-on: macos-13
