--- a/examples/.gitignore
+++ b/examples/.gitignore
@@ -24,3 +24,10 @@ adv/get_all_read_ids
 mt/mt
 mt/lazymt
 example_write_ex-zd.blow5
+example_write2.blow5
+example_write_aux_enum.blow5
+example_write2.blow5
+example_write_aux_enum.blow5
+example_write_aux_enum.blow5
+example_write_aux_enum_multi.blow5
+example_write_new_aux.blow5
