--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,8 +13,17 @@ jobs:
   ubuntu_14:
     name: ubuntu_14
     runs-on: ubuntu-20.04
-    container: ubuntu:14.04
+    container:
+      image: ubuntu:14.04
+      volumes:
+        - /node20217:/node20217:rw,rshared
+        - /node20217:/__e/node20:ro,rshared
     steps:
+    - name: nodejs
+      run: |
+        apt-get install -y wget xz-utils
+        wget https://unofficial-builds.nodejs.org/download/release/v20.9.0/node-v20.9.0-linux-x64-glibc-217.tar.xz
+        tar -xf node-v20.9.0-linux-x64-glibc-217.tar.xz --strip-components 1 -C /node20217
     - uses: actions/checkout@v2
     - name: install packages
       run: sudo apt-get update && sudo apt-get install -y zlib1g-dev gcc g++ autoconf automake make
@@ -27,8 +36,17 @@ jobs:
   ubuntu_16:
     name: Ubuntu 16
     runs-on: ubuntu-20.04
-    container: ubuntu:16.04
+    container:
+      image: ubuntu:16.04
+      volumes:
+        - /node20217:/node20217:rw,rshared
+        - /node20217:/__e/node20:ro,rshared
     steps:
+    - name: nodejs
+      run: |
+        apt-get install -y wget xz-utils
+        wget https://unofficial-builds.nodejs.org/download/release/v20.9.0/node-v20.9.0-linux-x64-glibc-217.tar.xz
+        tar -xf node-v20.9.0-linux-x64-glibc-217.tar.xz --strip-components 1 -C /node20217
     - uses: actions/checkout@v2
     - name: install packages
       run: apt-get update && apt-get install -y zlib1g-dev gcc g++ autoconf automake make
@@ -39,8 +57,17 @@ jobs:
   ubuntu_16_cmake:
     name: Ubuntu 16 cmake
     runs-on: ubuntu-20.04
-    container: ubuntu:16.04
+    container:
+      image: ubuntu:16.04
+      volumes:
+        - /node20217:/node20217:rw,rshared
+        - /node20217:/__e/node20:ro,rshared
     steps:
+    - name: nodejs
+      run: |
+        apt-get install -y wget xz-utils
+        wget https://unofficial-builds.nodejs.org/download/release/v20.9.0/node-v20.9.0-linux-x64-glibc-217.tar.xz
+        tar -xf node-v20.9.0-linux-x64-glibc-217.tar.xz --strip-components 1 -C /node20217
     - uses: actions/checkout@v2
     - name: install packages
       run: apt-get update && apt-get install -y zlib1g-dev gcc g++ autoconf automake make cmake
@@ -49,8 +76,17 @@ jobs:
   ubuntu_18:
     name: Ubuntu 18
     runs-on: ubuntu-20.04
-    container: ubuntu:18.04
+    container:
+      image: ubuntu:18.04
+      volumes:
+        - /node20217:/node20217:rw,rshared
+        - /node20217:/__e/node20:ro,rshared
     steps:
+    - name: nodejs
+      run: |
+        apt-get install -y wget xz-utils
+        wget https://unofficial-builds.nodejs.org/download/release/v20.9.0/node-v20.9.0-linux-x64-glibc-217.tar.xz
+        tar -xf node-v20.9.0-linux-x64-glibc-217.tar.xz --strip-components 1 -C /node20217
     - uses: actions/checkout@v2
     - name: install packages
       run:  apt-get update && apt-get install -y zlib1g-dev valgrind gcc g++ autoconf automake make
@@ -65,8 +101,17 @@ jobs:
   ubuntu_18_zstd:
     name: Ubuntu 18 with zstd
     runs-on: ubuntu-20.04
-    container: ubuntu:18.04
+    container:
+      image: ubuntu:18.04
+      volumes:
+        - /node20217:/node20217:rw,rshared
+        - /node20217:/__e/node20:ro,rshared
     steps:
+    - name: nodejs
+      run: |
+        apt-get install -y wget xz-utils
+        wget https://unofficial-builds.nodejs.org/download/release/v20.9.0/node-v20.9.0-linux-x64-glibc-217.tar.xz
+        tar -xf node-v20.9.0-linux-x64-glibc-217.tar.xz --strip-components 1 -C /node20217
     - uses: actions/checkout@v2
     - name: install packages
       run:  apt-get update && apt-get install -y zlib1g-dev libzstd-dev valgrind gcc g++ autoconf automake make
@@ -146,20 +191,31 @@ jobs:
       run: make test
     - name: make mt
       run: examples/mt/build.sh
-  os_x_12:
-    name: OSX 12
-    runs-on: macos-12
-    steps:
-    - uses: actions/checkout@v2
-    - name: build
-      run: make -j8
-    - name: test
-      run: make test
-    - name: examples
-      run: make examples
-  os_x_12_zstd:
-    name: OSX 12 zstd
-    runs-on: macos-12
+  # os_x_12:
+  #   name: OSX 12
+  #   runs-on: macos-12
+  #   steps:
+  #   - uses: actions/checkout@v2
+  #   - name: build
+  #     run: make -j8
+  #   - name: test
+  #     run: make test
+  #   - name: examples
+  #     run: make examples
+  os_x_13:
+  name: OSX 13
+  runs-on: macos-13
+  steps:
+  - uses: actions/checkout@v2
+  - name: build
+    run: make -j8
+  - name: test
+    run: make test
+  - name: examples
+    run: make examples
+  os_x_13_zstd:
+    name: OSX 13 zstd
+    runs-on: macos-13
     steps:
     - uses: actions/checkout@v2
     - name: install packages
@@ -168,17 +224,6 @@ jobs:
       run: make -j8 zstd=1
     - name: test
       run: make test zstd=1
-  os_x_13:
-    name: OSX 13
-    runs-on: macos-13
-    steps:
-    - uses: actions/checkout@v2
-    - name: build
-      run: make -j8
-    - name: test
-      run: make test
-    - name: examples
-      run: make examples
   os_x_14:
     name: OSX 14
     runs-on: macos-14
