--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -13,8 +13,17 @@ jobs:
   ubuntu_14:
     name: pyslow5 Ubuntu_14
     runs-on: ubuntu-20.04
-    container: ubuntu:14.04
+    container:
+      image: ubuntu:14.04
+      volumes:
+        - /node20217:/node20217:rw,rshared
+        - /node20217:/__e/node20:ro,rshared
     steps:
+    - name: nodejs
+      run: |
+        apt-get install -y wget xz-utils
+        wget https://unofficial-builds.nodejs.org/download/release/v20.9.0/node-v20.9.0-linux-x64-glibc-217.tar.xz
+        tar -xf node-v20.9.0-linux-x64-glibc-217.tar.xz --strip-components 1 -C /node20217
     - uses: actions/checkout@v2
     - name: install packages
       run: sudo apt-get update && sudo apt-get install -y zlib1g-dev python3-pip wget && wget --no-check-certificate https://bootstrap.pypa.io/pip/3.4/get-pip.py && python3 get-pip.py && pip3 install setuptools cython "numpy>=1.13.3,<1.15.0" --user
@@ -27,8 +36,17 @@ jobs:
   ubuntu_16:
     name: pyslow5 Ubuntu 16
     runs-on: ubuntu-20.04
-    container: ubuntu:16.04
+    container:
+      image: ubuntu:16.04
+      volumes:
+        - /node20217:/node20217:rw,rshared
+        - /node20217:/__e/node20:ro,rshared
     steps:
+    - name: nodejs
+      run: |
+        apt-get install -y wget xz-utils
+        wget https://unofficial-builds.nodejs.org/download/release/v20.9.0/node-v20.9.0-linux-x64-glibc-217.tar.xz
+        tar -xf node-v20.9.0-linux-x64-glibc-217.tar.xz --strip-components 1 -C /node20217
     - uses: actions/checkout@v2
     - name: install packages
       run: apt-get update && apt-get install -y lsb-release zlib1g-dev python3-pip python3-setuptools && pip3 install cython "numpy>=1.14.5,<1.19.0"
@@ -41,8 +59,17 @@ jobs:
   pyslow5_ubuntu_18:
     name: pyslow5 Ubuntu 18
     runs-on: ubuntu-20.04
-    container: ubuntu:18.04
+    container:
+      image: ubuntu:18.04
+      volumes:
+        - /node20217:/node20217:rw,rshared
+        - /node20217:/__e/node20:ro,rshared
     steps:
+    - name: nodejs
+      run: |
+        apt-get install -y wget xz-utils
+        wget https://unofficial-builds.nodejs.org/download/release/v20.9.0/node-v20.9.0-linux-x64-glibc-217.tar.xz
+        tar -xf node-v20.9.0-linux-x64-glibc-217.tar.xz --strip-components 1 -C /node20217
     - uses: actions/checkout@v2
     - name: install packages
       run: apt-get update && apt-get install -y zlib1g-dev python3-pip && pip3 install setuptools cython numpy
@@ -101,17 +128,17 @@ jobs:
           ldd --version && gcc --version && python3 --version &&
           make pyslow5 &&
           python3 -m unittest -v python/test.py"
-  os_x_12:
-    name: pyslow5 mac os 12
-    runs-on: macos-12
-    steps:
-    - uses: actions/checkout@v2
-    - name: install packages
-      run: pip3 install numpy setuptools
-    - name: build
-      run: make pyslow5
-    - name: test
-      run: python3 -m unittest -v python/test.py
+  # os_x_12:
+  #   name: pyslow5 mac os 12
+  #   runs-on: macos-12
+  #   steps:
+  #   - uses: actions/checkout@v2
+  #   - name: install packages
+  #     run: pip3 install numpy setuptools
+  #   - name: build
+  #     run: make pyslow5
+  #   - name: test
+  #     run: python3 -m unittest -v python/test.py
   os_x_13:
     name: pyslow5 mac os 13
     runs-on: macos-13
