--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -125,11 +125,11 @@ jobs:
     name: Ubuntu 20
     runs-on: ubuntu-24.04
     container:
-      image: ubuntu:20.04    
+      image: ubuntu:20.04
     steps:
     - uses: actions/checkout@v2
     - name: install packages
-      run: apt-get update && apt-get install zlib1g-dev gcc g++ autoconf automake make clang
+      run: apt-get update && apt-get install -y zlib1g-dev gcc g++ autoconf automake make clang
     - name: build-gcc
       run: make -j8
     - name: test-gcc
@@ -142,11 +142,9 @@ jobs:
     name: Ubuntu 20 icc
     runs-on: ubuntu-24.04
     container:
-      image: ubuntu:20.04       
+      image: ubuntu:20.04
     steps:
     - uses: actions/checkout@v2
-      with:
-        submodules: recursive
     - name: Intel Apt repository
       timeout-minutes: 1
       run: |
