--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -159,7 +159,7 @@ jobs:
       run: apt-get update && apt-get install -y libzstd-dev intel-oneapi-compiler-dpcpp-cpp-and-cpp-classic
     - name: Setup Intel oneAPI environment
       run: |
-        source /opt/intel/oneapi/setvars.sh
+        . /opt/intel/oneapi/setvars.sh
         printenv >> $GITHUB_ENV
     - name: build
       run: make CC=icc -j8
