--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -49,7 +49,7 @@ jobs:
         tar -xf node-v20.9.0-linux-x64-glibc-217.tar.xz --strip-components 1 -C /node20217
     - uses: actions/checkout@v2
     - name: install packages
-      run: apt-get update && apt-get install -y lsb-release zlib1g-dev python3-pip python3-setuptools && pip3 install cython "numpy>=1.14.5,<1.19.0"
+      run: apt-get update && apt-get install -y lsb-release zlib1g-dev python3-pip python3-setuptools && pip3 install "cython<0.3.0" "numpy>=1.14.5,<1.19.0"
     - name: env
       run: lsb_release -a &&  ldd --version && gcc --version && g++ --version  && python3 --version
     - name: build
